overflow fix hotspot & fix

--- a/less/custom/theme-extras.less
+++ b/less/custom/theme-extras.less
@@ -178,7 +178,6 @@ body{
             background-color:@esdc-dark-blue;
             color:white;
             padding:20px;
-            paddin-bottom:0px;
             border-radius:30px;
             margin-bottom:40px;
         }
@@ -750,6 +749,13 @@ body{
 		}
 	}
 }
+
+// overflow for hotspots
+.notify.hotgraphic .notify-popup-content-inner .hotgraphic-popup-inner {
+    overflow-y: scroll;
+    height: 25vw;
+}
+
 
 
 
